[package]
name = "orml-currencies"
description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
sp-io = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }

frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }

orml-traits = { path = "../orml-traits", version = "0.4.1-dev", default-features = false }
orml-utilities = { path = "../orml-utilities", version = "0.4.1-dev", default-features = false }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-core = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
orml_tokens = { version = "0.4.1-dev", package = "orml-tokens", path = "../orml-tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
	"scale-info/std",
]
