[package]
name = "orml-utilities"
description = "Various utilities including `FixedU128` and `LinkedList`."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/utilities"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }
sp-io = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.53"
frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = '435f56edc14a3a7e895ff5370f6e5179dc547cc4' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"scale-info/std",
]
