[lib]
path = "lib.rs"

[package]
name = "pallet-nop-precompiles"
authors = [ "NFTMart" ]
description = "A Precompile to make Substrate's pallet-nop accessible to pallet-evm"
edition = "2021"
version = "4.0.0-dev"

[dependencies]
log = {version = "0.4", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

# Moonbeam
precompile-utils = { default-features = false, git = 'https://github.com/nftt-studio/moonbeam.git', branch = "master"}

# Substrate
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
fp-evm = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }
frame-support = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }
sp-io = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }
pallet-balances = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }
pallet-nop = { default-features = false, path = "../../pallets/nop" }


# Frontier
pallet-evm = { git = "https://github.com/nftt-studio/frontier.git", branch = "moonbeam-polkadot-v0.9.13", default-features = false }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
serde = "1.0.100"

# Substrate
scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.13" }

[features]
default = [ "std" ]
std = [
	"log/std",
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-nop/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
